@@ -19,6 +19,7 @@ Version 0.4c
  - Most healing spells replaced
 * Kyna is locked to debug mode. I'll leave her where she is for now, but she's likely going to be removed at some point in the future.
 * The outlaws intro tweaked slightly (Zenith)
+* Added a short, alternate hypnotist scene to the desert naga that doesn't require you to have lost to her. You need to have mastered hypnotist.
 
 --------------------------------------------
              PREVIOUS VERSIONS
